<resources>
    <string name="app_name" translatable="false">iDENTITY</string>
    <string name="action_settings">Settings</string>
    <string name="aadhar">Aadhaar Card</string>
    <string name="passport">Passport</string>
    <string name="pan">Pan Card</string>
    <string name="driving">Driving License</string>
    <string name="voter">Voter\'s ID</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_aadharcard">Steps to apply for an Aadhaar Card</string>
    <string name="aadhar_card1">Go to any authorized Aadhaar enrollment center anywhere in India with your identity and address proof.</string>
    <string name="aadhar_card2">Proof of Identity: Photo ID card, Passport, PAN Card, Driving License.\n\nProof of Address: Ration Card, etc.</string>
    <string name="aadhar_card3">If your locality is not listed in the online appointment application website, you will have to walk-in at any nearby Aadhaar card center, without prior appointment.</string>
    <string name="aadhar_card4">You can get free Aadhaar card application form(s) at the center itself, or you may choose to download it online.</string>
    <string name="aadhar_card5">It is advisable to download, take a print out and go to the Aadhaar card center with the already filled application form(s) to save time at the center.</string>
    <string name="aadhar_card6">At the time of enrollment, your photo, finger-prints and iris scan will be taken.</string>
    <string name="aadhar_card7">Carefully review the details you have provided and make corrections, if any, during the enrollment itself.</string>
    <string name="aadhar_card8">During enrollment, you will receive an acknowledgment slip, till the time you don\'t receive your original Aadahar Card copy.</string>
    <string name="aadhar_card9">The information details will be verified centrally before you are issued Aadhaar Card.</string>
    <string name="aadhar_card10">On successful verification, you will first receive an SMS and/or email notification and later after a few days your Aadhaar number will be printed and sent to your address through post.</string>
    <string name="nearest">Find your nearest centre now.</string>
    <string name="title_activity_pancard">Steps to apply for Pan Card</string>
    <string name="title_activity_passport">Steps to apply for Passport</string>
    <string name="title_activity_dlicense">Steps to apply for Driving License</string>
    <string name="title_activity_voterid">Steps to apply for Voter\'s ID</string>
    <string name="steps_driving_license1">For getting learner\'s licence in Tamilnadu follow the below steps\:</string>
    <string name="steps_driving_license2">Learn the basic traffic rules.</string>
    <string name="steps_driving_license3">Learn the basic signs.</string>
    <string name="steps_driving_license4">Take demo tests for learner’s licence.(OPTIONAL)</string>
    <string name="steps_driving_license5">Apply online for learner\'s licence and book a slot for appearing in learner\'s licence test.\n\n(OR)\n\nSelect a day on which you are free as it may take some more than specified time.</string>
    <string name="steps_driving_license6">Instead of applying online you can directly go to your local RTO office and apply directly but the persons who booked slot online will get priority over you.</string>
    <string name="steps_driving_license7">You need to fill all the form with one local address proof,permanent address proof and age proof.</string>
    <string name="steps_driving_license8">If you are minor you require to fill consent form from guardian.</string>
    <string name="steps_pan_card1">Here are the steps involved in applying for a PAN card when you wish to do it online -</string>
    <string name="steps_pan_card2">Visit the website of the Income Tax Pan Services Unit.</string>
    <string name="steps_pan_card3">This is the home page of the Income Tax PAN Services unit and has different choices such as application for a new PAN, Enquiry and Tracking status, Reprint of PAN card and changes or correction in the PAN details. The applicant must choose the option which is applicable to him.</string>
    <string name="steps_pan_card4">To apply for a new PAN, Form 49A will need to be used.</string>
    <string name="steps_pan_card5">Fill in the details and submit the form online. After the form is submitted online successfully, an acknowledgement is displayed. This shows a unique 15 digit acknowledgement number. This acknowledgement must be saved and printed for further process.</string>
    <string name="steps_pan_card6">The acknowledgement form must be sent to the Income Tax department. Before sending this, you will need to attach a few documents along with the acknowledgment form. This includes a proof of address and a proof of identity. Your name which is mentioned in these documents should be in the same format as that in the PAN application form. Take care of this at the time of filling in Form 49A.</string>
    <string name="steps_pan_card7">You must also affix two recent colour photographs on the acknowledgment form in the applicable space. Signatures have to be made where indicated. The photograph you affix should be clear and recent, as this is the same photograph which will be used on your PAN card.</string>
    <string name="steps_pan_card8">Application for PAN necessitates payment of Rs.96 if the communication address is within India. In this case, you can make the payment by one of the following methods - cheque, Demand Draft, internet banking, credit card or debit card. If the communication address is outside the country, then the amount to be paid is Rs. 962, and this is only in the form of a demand draft. In the case of payment by internet banking, by credit card or by debit card, the payment has to be made at the time of filling in the form, after which a payment acknowledgement will be given. Take a print of this and attach with the acknowledgement form.</string>
    <string name="steps_pan_card9">The acknowledgement form must thus be accompanied by photographs, proof of address, proof of identification and the payment/payment proof as the case may be. This must be sent to NSDL in Pune within 15 days of the online application date. The envelope must be subscribed with the words \'APPLICATION FOR PAN - Acknowledgement Number\'. The applications are processed at NSDL after receipt of payment - meaning if the payment has been made by means of a demand draft or cheque, you must wait for realization of the payment.</string>
    <string name="steps_passport1">Follow these steps:</string>
    <string name="steps_passport2">Go to the Passport Seva website.</string>
    <string name="steps_passport3">Click Register Now in the box titled Apply.</string>
    <string name="steps_passport4">Now fill the form to create an account on the Passport Seva website. You need to select the passport office of the city you\'re living in now, not your native place. Also make sure that you enter the name exactly as it appears in your other documents to avoid any problems with your application. The rest of the form is pretty straightforward - it\'s just like signing up for any other website.</string>
    <string name="steps_passport5">Click Register when done.</string>
    <string name="steps_passport6">Now that you\'ve created your account, return to the Passport Seva website.</string>
    <string name="steps_passport7">Click the green Login button.</string>
    <string name="steps_passport8">Enter your email address and click Continue.</string>
    <string name="steps_passport9">Key in your email, password and the characters in the image. Click Login.</string>
    <string name="steps_passport10">Click Apply for Fresh Passport/Reissue of Passport.</string>
    <string name="steps_passport11">You can either download the form, fill it and upload it back to the website, or just fill the details online. We recommend that you fill the details online to save time.\n\nIn case you want to download the form anyway, click \"Click here to download the soft copy of the form\", in the first subheading on the page titled Alternative 1.</string>
    <string name="steps_passport12">If you want to fill the form online, click on \"Click here to fill the application form online\" under Alternative 2. We suggest you choose this option as it is the easiest way to apply for your passport.</string>
    <string name="steps_passport13">On the next page, you\'ll have to choose between a Fresh passport or Re-issue, a Normal or Tatkal passport, 38 pages or 60 pages. Make the selections as per your requirements, and click Next page.</string>
    <string name="steps_passport14">You have to enter your personal information on the next page, and once again, the information you fill should match your other documents. If you have any doubts, you can refer to this official instruction booklet. Once you\'re done, click Submit Application at the bottom right.</string>
    <string name="steps_passport15">After you\'ve filled the form, return to the webpage mentioned in step 9.</string>
    <string name="steps_passport16">Click View Saved/Submitted Applications.</string>
    <string name="steps_passport17">You\'ll see the application you just submitted. Click the radio button next to it and click Pay and Schedule Appointment.</string>
    <string name="steps_passport18">Select Online Payment and click Next.\n\nA list of Passport Seva Kendras from your city will appear on screen along with the date and time of the earliest available appointment.</string>
    <string name="steps_passport19">Select one of these from the drop-down menu next to PSK Location.</string>
    <string name="steps_passport20">Enter the characters in the image next to and click Next.</string>
    <string name="steps_passport21">Click Pay and Book Appointment.</string>
    <string name="steps_passport22">This will now take you to the payment gateway. Complete your payment and you\'ll be redirected to the Passport Seva website.</string>
    <string name="steps_passport23">Now you\'ll see a page titled Appointment Confirmation with all the details of your appointment at the Passport Seva Kendra (PSK).</string>
    <string name="steps_passport24">Click Print Application Receipt. The next page will show a detailed view of the application - again, click on Print Application Receipt.</string>
    <string name="steps_passport25">On the next page you\'ll see a preview of the receipt. Once again, click Print Application Receipt to finally take a printout of the appointment confirmation.</string>
    <string name="steps_passport26">You will need a print of this receipt to enter the PSK.</string>
    <string name="visit_now">Visit now!</string>
    <string name="fill_now">Fill now!</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="step_4">Step 4</string>
    <string name="step_5">Step 5</string>
    <string name="step_6">Step 6</string>
    <string name="step_7">Step 7</string>
    <string name="step_8">Step 8</string>
    <string name="step_9">Step 9</string>
    <string name="step_10">Step 10</string>
    <string name="step_11">Step 11</string>
    <string name="step_12">Step 12</string>
    <string name="step_13">Step 13</string>
    <string name="step_14">Step 14</string>
    <string name="step_15">Step 15</string>
    <string name="step_16">Step 16</string>
    <string name="step_17">Step 17</string>
    <string name="step_18">Step 18</string>
    <string name="step_19">Step 19</string>
    <string name="step_20">Step 20</string>
    <string name="step_21">Step 21</string>
    <string name="step_22">Step 22</string>
    <string name="step_23">Step 23</string>
    <string name="step_24">Step 24</string>
    <string name="step_25">Step 25</string>
    <string name="passport_go_now">Go to the Website now!</string>
</resources>